fixed width on smaller displays

--- a/land.css
+++ b/land.css
@@ -1,5 +1,6 @@
 * {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
+    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 body {
@@ -7,38 +8,42 @@ body {
   /* background: #e7e7e7; */
   background-position: center;
   background-size: cover;
+  min-height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
 
-#title{
+#title {
   margin: 40px auto;
   padding: 5px 10px;
-  width: 40%;
+  width: max(40%, 400px);
 
   display: flex;
   justify-content: center;
 
   background-color: black;
-  box-shadow: 0.3vw 1vw 0px 0px rgba(140,140,140,1),
-  inset 0.3vw 1vw 0px 0px rgba(140,140,140,1);
+  box-shadow: 0.3vw 1vw 0px 0px rgba(140, 140, 140, 1),
+    inset 0.3vw 1vw 0px 0px rgba(140, 140, 140, 1);
 
   border-style: solid;
   border-width: 0.8vw;
   border-color: rgb(187, 187, 187);
   border-radius: 20px;
-
 }
 h1 {
   width: 50%;
   margin-top: 5px;
   margin-bottom: 5px;
-  font-size: 4vw;
+  font-size: clamp(40px, 4vw, 4vw);
 }
-#title_s{
+#title_s {
   text-align: end;
-  color: #027FFF;
+  color: #027fff;
   text-shadow: 1px 2px 0px #970a00;
 }
-#title_k{
+#title_k {
   text-align: start;
   color: #f81606;
   text-shadow: 1px 2px 0px #004891;
@@ -47,20 +52,19 @@ h1 {
 .inner {
   display: flex;
   flex-direction: column;
-  
-  width: 40%;
+
+  width: max(40%, 400px);
   height: auto;
   margin: 0 auto;
 
   background-color: rgba(0, 0, 0, 1);
-  
-  box-shadow: 0.3vw 1vw 0px 0px rgba(140,140,140,1),
-  inset 0.3vw 1vw 0px 0px rgba(140,140,140,1);
+
+  box-shadow: 0.3vw 1vw 0px 0px rgba(140, 140, 140, 1),
+    inset 0.3vw 1vw 0px 0px rgba(140, 140, 140, 1);
   border-radius: 26px;
   border: 0.8vw solid rgb(187, 187, 187);
 
   padding: 2% 2%;
-
 }
 
 .row {
@@ -69,9 +73,9 @@ h1 {
   justify-content: space-between;
   margin: 1% auto;
 }
-hr{
+hr {
   height: 2px !important;
-  background-color: white ;
+  background-color: white;
 }
 
 #text {
@@ -86,34 +90,33 @@ input {
   width: 120px;
   font-size: 18px;
 }
-label{
+label {
   text-align: center;
 }
-#team1:placeholder-shown{
-background-color: rgb(182, 132, 132);
+#team1:placeholder-shown {
+  background-color: rgb(182, 132, 132);
 }
-#team2:placeholder-shown{
+#team2:placeholder-shown {
   background-color: rgb(122, 148, 196);
-  }
+}
 /* for nscore */
-#nscore{
+#nscore {
   text-align: center;
-  width : 120px;
-  height : 40px;
+  width: 120px;
+  height: 40px;
   font-size: 28px;
-  margin : 0px auto;
+  margin: 0px auto;
   padding: 2px 2px;
 }
-#nscore:placeholder-shown{
+#nscore:placeholder-shown {
   background-color: rgb(211, 210, 210);
 }
 
 #submit {
-
   padding: 2% 3%;
   background-color: #1cdb03;
   color: #000000;
-  
+
   margin: 0 auto;
   border-radius: 8px;
 
@@ -123,10 +126,9 @@ background-color: rgb(182, 132, 132);
   font-weight: bold;
 
   transition: 0.3s;
-
 }
-#submit:hover{
-  box-shadow: 0px 3px 0px 0px rgba(255,255,255,0.75);
+#submit:hover {
+  box-shadow: 0px 3px 0px 0px rgba(255, 255, 255, 0.75);
   transition: 0.3s;
   transform: translateY(-2px);
   background-color: rgb(43, 255, 43);
